<resources>
    <string name="app_name">GameShed</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="prompt_email">Email</string>
    <string name="name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register new user</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_user">Welcome new user</string>
    <string name="problem">Problem creating account</string>
    <string name="logout">Logout</string>
    <string name="logged_out">You are now logged out</string>
    <string name="no_account">Do not have an account, Sign Up</string>
    <string name="have_account">Already have an account, Sign In</string>
    <string name="here">Here</string>
    <string name="saved">Saved</string>
    <string name="clickToSave">Click To Save</string>


    <string-array name="app_features">
        <item>> User can view latest and upcoming games</item>
        <item>> User can save games to their favorite list</item>
        <item>> User can view detail of games</item>
        <item>> User can access their favorite games any time</item>
    </string-array>
    <!-- strings related to the list -->
    <string name="todo">To Do List</string>
    <string name="add">Add item to firestore</string>
    <string name="fetch">Fetch All data from firestore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating: %1$s</string>
    <string name="game_name">Game Name</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="release_date">Release Date: %1$s.</string>
    <string name="tba">TBA :</string>
    <string name="platform">Platforms :</string>
    <string name="esrb_rating">ESRB Rating :</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="developed_by">Developed By</string>
    <string name="developers">Uday, Ivan and Harprit</string>
    <string name="app_features">App features</string>
    <string name="app_info">This application is developed as a part of project 2 of Android development course.</string>
    <string name="website">"Website: %1$s."</string>
</resources>